sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart = getNombreValeur;
	var swap = false
while(ecart > 1 || swap = true){
	if (ecart > 1){
		swap = false
		ecart = ecart / 1.3
		var i = 0 
		while (i + ecart < getNombreValeur){
			if (plusPetit(i+ecart,i)){
				echange(i,i+ecart)
				i = i + 1
				swap = true
			}
		}
	}
}
   si ecart>1 alors
     ecart = ecart / 1.3
   i = O
   tant que i+ecart < lgr faire:
     si i et i+ecart doivent être inversés, le faire
     incrémenter i de 1
 tant que l'écart est plus grand que 1 ou que le dernier parcours a inversé au moins un élément
}
